# sdv_lab

./: .dockerignore  .gitignore  README.md  cruise_control.yaml  justfile  shared-notebooks-manifest.yaml  shared_notebooks.md
EgoVehicle/: .dockerignore  Cargo.toml  Dockerfile  README.md  enter_container.sh  enter_docker_container.sh  make_container.sh  make_docker_container.sh
EgoVehicle/src/: args.rs  lib.rs  main.rs  sensor_data_serde.rs  sensors.rs
EgoVehicle/src/sensor_data_serde/: actor.rs  collision.rs  image.rs  lane_invasion.rs  lidar_measurement.rs  nalgebra.rs  obstacle_detection.rs  radar_measurement.rs
EgoVehicle/src/sensors/: actor.rs  collision.rs  image.rs  lane_invasion.rs  lidar_measurement.rs  obstacle_detection.rs  radar_measurement.rs  sensor_comms.rs
aaos_digital_cluster/: Documentation.md  Tutorial.md  settings.gradle.kts
aaos_digital_cluster/app/: build.gradle.kts
aaos_digital_cluster/gradle/: libs.versions.toml
aaos_digital_cluster/gradle/wrapper/: gradle-wrapper.properties
android_python/: README.md
android_python/android/: Tutorial - Cruise Control.md
android_python/python/: .dockerignore  Dockerfile.publisher  Dockerfile.subscriber  README.md  data.json  mqtt-publisher.yaml  mqtt-python.yaml  publisher.py
android_treadx/: README.md
android_treadx/android/: README.md
android_treadx/android/digital-cluster-app/: README.md
android_treadx/threadx/: .gitignore  .gitmodules  Cargo.toml  README.md
android_treadx/threadx/netx-sys/: Cargo.toml  LICENSE  build.rs
android_treadx/threadx/netx-sys/cfg/: nx_user.h
android_treadx/threadx/netx-sys/shared/: CMakeLists.txt
android_treadx/threadx/netx-sys/src/: generated.rs  lib.rs
android_treadx/threadx/threadx-app/: README.md
android_treadx/threadx/threadx-app/cross/: Cargo.toml  Embed.toml  application_architecture.adoc  memory.x  non_working.txt  not_working.txt  test.lua  working.txt
android_treadx/threadx/threadx-app/cross/app/: Cargo.toml  SIMPLE_BUTTON_README.md
android_treadx/threadx/threadx-app/cross/app/src/: lib.rs  uprotocol_v1.rs  utransport.rs
android_treadx/threadx/threadx-app/cross/app/src/threadx/: exceptions.rs
android_treadx/threadx/threadx-app/cross/board/: Cargo.toml
android_treadx/threadx/threadx-app/cross/board/src/: lib.rs
android_treadx/threadx/threadx-app/xtask/: Cargo.toml
android_treadx/threadx/threadx-rs/: Cargo.toml
android_treadx/threadx/threadx-sys/: Cargo.toml  build.rs
android_treadx/threadx/wiced-sys/: Cargo.toml  build.rs
android_treadx/threadx/wiced-sys/src/: lib.rs  wiced_sdk.h
android_uprotocol/digital-cluster-app/: README.md  settings.gradle.kts
android_uprotocol/digital-cluster-app/app/: build.gradle.kts
android_uprotocol/digital-cluster-app/gradle/: libs.versions.toml
ankaios/: README.md  cruise_control.yaml
ankaios/aaos/: cuttlefish.dockerfile
ankaios/example_workload/: README.md  manifest.yaml
ankaios/example_workloads/: README.md
ankaios/example_workloads/python_workload/: Dockerfile  README.md  app.py  manifest.yaml  requirements.txt
ankaios/example_workloads/rust_workload/: Cargo.toml  Dockerfile  README.md  manifest.yaml
ankaios/threadx_board_simulator/: threadx_board_simulator.dockerfile
ankaios/ustreamer/: cruise_control.yaml
architecture/: Cruise_Control_US.drawio
assets/: Ankaios Archdrawio.drawio
carla-setup/: .gitignore  README.md  build_with_container.sh  carla-build.just  carla-client.just  carla-common.just  carla-rust.just  carla-server.just  justfile
carla-setup/examples/: README.md  automatic_control_zenoh.py  manual_control_sensors.py  manual_control_zenoh.py  zenoh_vehicle.py
carla-setup/just/: carla-build.just  carla-client.just  carla-common.just  carla-rust.just  carla-rust.patch  carla-src.patch  utils.just
clang-12-setup-for-ubuntu-24.04/: README.md
ego-vehicle/: README.md  ego-vehicle-uprotocol.yaml  ego-vehicle-zenoh.yaml
ego-vehicle/container/: README.md
ego-vehicle/uprotocol/: Cargo.toml  README.md
ego-vehicle/uprotocol-control/: Cargo.toml  Dockerfile  README.md
ego-vehicle/uprotocol-control/src/: main.rs
ego-vehicle/uprotocol-sensors/: .gitignore  Cargo.toml  Dockerfile  README.md  args.rs  main.rs  state.yaml
ego-vehicle/uprotocol-sensors/sensors/: obstacle_detection.rs  sensor_comms.rs
ego-vehicle/uprotocol-sensors/src/: args.rs  helpers.rs  main.rs  sensors.rs
ego-vehicle/uprotocol-sensors/src/sensors/: collision.rs  image.rs  imu_measurement.rs  lidar_measurement.rs  radar_measurement.rs
ego-vehicle/uprotocol-sensors/troubleshooting/: README.md  setup-compiler-flags.sh  setup-ubuntu-24.04-with-clang-12.sh
ego-vehicle/uprotocol/src/: main.rs
ego-vehicle/zenoh/: Cargo.toml  README.md
ego-vehicle/zenoh-control/: Cargo.toml  Dockerfile  README.md
ego-vehicle/zenoh-control/src/: main.rs
pid_controller/: Dockerfile  README.md  controller.py  requirements.txt
pid_controller/Rust/: Cargo.toml
pid_controller/Rust/src/: main.rs  uprotocol_handler.rs  zenoh_handler.rs  zenoh_pub.rs
pid_controller/python-zenoh/: README.md  main.py  requirements.txt  zenoh_handler.py
pid_controller/rust-uprotocol/: .dockerignore  Cargo.toml  Dockerfile.controller  Dockerfile.simulator  README.md  pid-controller.yaml  rust-uprotocol.yaml  simulator.yaml
pid_controller/rust-uprotocol/src/: main.rs  pid_controller.rs  uprotocol_handler.rs  uprotocol_pub.rs  zenoh_handler.rs  zenoh_pub.rs
pid_controller/rust-uprotocol/src/testing/: simulator.rs  uprotocol_pub.rs
uprotocol/: README.md
uprotocol/cruise-control-app/: Cargo.toml  Dockerfile  README.md  cruise-control-app.yaml
uprotocol/cruise-control-app/src/: main.rs
uprotocol/mqtt/: Cargo.toml
uprotocol/mqtt/src/: aaos.rs  threadx.rs
uprotocol/ustreamer/: docker-compose.yaml
uprotocol/ustreamer/config/: CONFIG.json5  MQTT_CONFIG.json5  subscription_data.json
uprotocol/zenoh/: Cargo.toml
uprotocol/zenoh-subscriber/: Cargo.toml
uprotocol/zenoh-subscriber/src/: main.rs
uprotocol/zenoh/src/: cruise_control.rs  ego_vehicle.rs
vehicle/: Cargo.toml
(+138 files in other folders)
