#
#  Copyright (c) 2025 The X-Verse <https://github.com/The-Xverse>
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

[package]
name = "ego-vehicle"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
carla = { path = "../../carla-setup/localBuild/carla-rust/carla" }
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
up-rust = "0.7.0"
up-transport-zenoh = "0.8.0"
zenoh = { version = "1.0.0-rc.2" }
