[package]
name = "pid_cruise_control"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = "0.7.0-rc"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
ordered-float = "5.0.0"
rand = "0.9.2"


[[bin]]
name = "zenoh_publisher"
path = "src/zenoh_pub.rs"

