[package]
name = "pid_cruise_control"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = "0.7.0-rc"
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
ordered-float = "5.0.0"
rand = "0.9.2"

[[bin]]
name = "pid_controller"
path = "src/main.rs"

[[bin]]
name = "zenoh_publisher"
path = "src/zenoh_pub.rs"

