[package]
name = "pid_cruise_control"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.0"
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
ordered-float = "5.0.0"
rand = "0.9.2"
async-trait = "0.1"

# uProtocol dependencies
up-rust = { version = "0.5.0", default-features = false }
up-transport-zenoh = { version = "0.6.0", features = ["zenoh-unstable"] }
zenoh = { version = "1.2.1", features = [
    "default",
    "plugins",
    "unstable",
    "internal",
] }

[[bin]]
name = "pid_controller"
path = "src/main.rs"

[[bin]]
name = "up_pub"
path = "src/uprotocol_pub.rs"
