[package]
name = "pid_cruise_control"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
ordered-float = "5.0.0"
rand = "0.9.2"
async-trait = "0.1"

# uProtocol dependencies
up-rust = "0.7.0"
up-transport-zenoh = "0.8.0"
zenoh = { version = "1.5.0" }


[[bin]]
name = "pid_controller"
path = "src/main.rs"

[[bin]]
name = "up_pub"
path = "src/testing/uprotocol_pub.rs"

[[bin]]
name = "simulator"
path = "src/testing/simulator.rs"
