[package]
name = "cruise-control-app"
version = "0.1.0"
edition = "2024"
description = "An example application implementing a simple cruise control system using the uProtocol framework"

[dependencies]
async-trait = { version = "0.1" }
backon = { version = "1.5", default-features = false, features = ["tokio-sleep"] }
bytes = { version = "1.10.1" }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "env",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
env_logger = "0.11"
fastrand = { version = "2.3" }
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
tokio = { version = "1.45", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
up-rust = { version = "0.7.1" }
up-transport-mqtt5 = { version = "0.3" }
up-transport-zenoh = { version = "0.8" }
